# gpu-power-monitor

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
research/: 50_series_gpu_baselines.md  tui_product_review.md
src/gpu_power_monitor/: __init__.py  __main__.py  config.py  daemon.py  gpu.py  i2c.py  protocol.py
src/gpu_power_monitor/tui/: app.py  widgets.py
tests/: test_app.py  test_config.py  test_daemon.py  test_gpu.py  test_i2c.py  test_protocol.py  test_widgets.py
